--- a/style/css/globals.css
+++ b/style/css/globals.css
@@ -125,6 +125,16 @@
   .lg-icon-button:hover {
     background-color: #c7c9d4; }
 
+.small-icon-button {
+  padding: 2px;
+  background-color: #7c7c7d;
+  color: white;
+  border: none;
+  border-radius: 7px;
+  cursor: pointer; }
+  .small-icon-button:hover {
+    background-color: #6f6f70; }
+
 .left-corner {
   position: fixed;
   left: 10px;
@@ -134,7 +144,7 @@
   margin-left: 190px;
   padding: 20px;
   padding-top: 70px;
-  padding-bottom: 70px; }
+  padding-bottom: 100px; }
   .layout h1 {
     color: var(--clr-cta);
     font-size: 42px; }
@@ -142,7 +152,7 @@
     color: var(--clr-cta); }
   .layout__content {
     padding: 20px;
-    background-color: #1f2026;
+    background-color: var(--clr-content);
     border: 1px solid var(--clr-content-border);
     border-radius: 7px;
     padding-bottom: 50px; }
@@ -157,9 +167,9 @@
   .home .skill {
     margin-bottom: 3px; }
     .home .skill:hover {
-      background-color: #212429; }
+      background-color: var(--clr-content-border); }
   .home hr {
-    background-color: black;
+    background-color: var(--clr-hr);
     height: 1px;
     border: none;
     margin-top: 40px;
@@ -188,6 +198,22 @@
 @media only screen and (max-width: 700px) {
   .profile {
     flex-wrap: wrap-reverse; } }
+
+.footer {
+  text-align: center;
+  position: relative; }
+  .footer h3 {
+    font-size: 24px; }
+  .footer span {
+    font-size: 17px; }
+    .footer span:hover {
+      color: #aaaebe; }
+  .footer hr {
+    background-color: var(--clr-hr);
+    height: 1px;
+    border: none;
+    margin-top: 40px;
+    margin-bottom: 20px; }
 
 .flex-box {
   display: flex; }
@@ -285,4 +311,13 @@ body {
   --clr-primary2: #343638;
   --clr-primary3: #7c7c7d;
   --clr-content-border: rgb(64, 68, 79);
-  --clr-cta: #2c55a6; }
+  --clr-cta: #2c55a6;
+  --clr-hr: 'black'; }
+
+.light-theme {
+  --clr-body: #f2f3f4;
+  --clr-content: #ffffff;
+  --clr-content-border: #bfbfbf;
+  --clr-cta: #4486e8;
+  --clr-primary: #2b2b2b;
+  --clr-hr: #bfbfbf; }
