--- a/style/sass/app.scss
+++ b/style/sass/app.scss
@@ -59,6 +59,10 @@
   @include lg-icon-button($clr-primary);
 }
 
+.small-icon-button {
+  @include small-icon-button($clr-primary3);
+}
+
 .left-corner {
   position: fixed;
   left: 10px;
@@ -70,7 +74,7 @@
 
   padding: 20px;
   padding-top: 70px;
-  padding-bottom: 70px;
+  padding-bottom: 100px;
 
   h1 {
     color: var(--clr-cta);
@@ -84,7 +88,7 @@
   &__content {
     padding: 20px;
 
-    background-color: rgb(31, 32, 38);
+    background-color: var(--clr-content);
     border: 1px solid var(--clr-content-border);
     border-radius: 7px;
     padding-bottom: 50px;
@@ -103,12 +107,12 @@
   .skill {
     margin-bottom: 3px;
     &:hover {
-      background-color: $clr-body;
+      background-color: var(--clr-content-border);
     }
   }
 
   hr {
-    background-color: black;
+    background-color: var(--clr-hr);
     height: 1px;
     border: none;
     margin-top: 40px;
@@ -151,5 +155,28 @@
 .profile {
   @media only screen and (max-width: 700px) {
     flex-wrap: wrap-reverse;
+  }
+}
+
+.footer {
+  text-align: center;
+  position: relative;
+  h3 {
+    font-size: 24px;
+  }
+
+  span {
+    font-size: 17px;
+    &:hover {
+      color: darken($clr-primary, 15%);
+    }
+  }
+
+  hr {
+    background-color: var(--clr-hr);
+    height: 1px;
+    border: none;
+    margin-top: 40px;
+    margin-bottom: 20px;
   }
 }
