--- a/style/sass/main.scss
+++ b/style/sass/main.scss
@@ -33,7 +33,11 @@ body {
   --clr-primary3: #7c7c7d;
   --clr-content-border: rgb(64, 68, 79);
   --clr-cta: #2c55a6;
-  --clr-hr: 'black';
+  --clr-hr: black;
+  --clr-green: #20d43e;
+  --clr-green-2: #d3f5d8;
+  --clr-red: #bd1108;
+  --clr-red-2: #e89d99;
 }
 
 .light-theme {
