--- a/style/sass/mixins.scss
+++ b/style/sass/mixins.scss
@@ -23,3 +23,24 @@
     background-color: darken($clr, 5%);
   }
 }
+
+@mixin large-cta-button($clr, $clr-text) {
+  padding: 10px;
+  background-color: $clr;
+  color: $clr-text;
+  border: none;
+  border-radius: 7px;
+  font-size: 24px;
+  width: 140px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: darken($clr, 5%);
+  }
+}
+
+@mixin top-right-corner($px) {
+  position: absolute;
+  top: $px;
+  right: $px;
+}
