--- a/style/sass/main.scss
+++ b/style/sass/main.scss
@@ -28,6 +28,7 @@ body {
   --clr-side-nav: #070809;
   --clr-side-nav-link: #a0a1a3;
   --clr-content: #1f2026;
+  --clr-content-2: #42434a;
   --clr-primary: #d5d7df;
   --clr-primary2: #343638;
   --clr-primary3: #7c7c7d;
@@ -47,4 +48,5 @@ body {
   --clr-cta: #4486e8;
   --clr-primary: #2b2b2b;
   --clr-hr: #bfbfbf;
+  --clr-content-2: #e6e8eb;
 }
