--- a/style/css/globals.css
+++ b/style/css/globals.css
@@ -282,6 +282,36 @@
   .info-message p {
     font-size: 15px; }
 
+.project-card {
+  background-color: var(--clr-content-2) !important;
+  border-radius: 10px;
+  position: relative;
+  padding: 15px;
+  padding-bottom: 50px;
+  font-size: 15px; }
+  .project-card__name {
+    background-color: var(--clr-hr);
+    height: 40px;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px; }
+    .project-card__name h3 {
+      font-size: 23px;
+      color: var(--clr-primary);
+      margin-bottom: 5px; }
+
+.projects__grid {
+  width: 100%;
+  max-width: 700px;
+  margin: 0 auto;
+  display: grid;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+  grid-template-columns: 1fr 1fr; }
+
 .flex-box {
   display: flex; }
 
@@ -374,6 +404,7 @@ body {
   --clr-side-nav: #070809;
   --clr-side-nav-link: #a0a1a3;
   --clr-content: #1f2026;
+  --clr-content-2: #42434a;
   --clr-primary: #d5d7df;
   --clr-primary2: #343638;
   --clr-primary3: #7c7c7d;
@@ -391,4 +422,5 @@ body {
   --clr-content-border: #bfbfbf;
   --clr-cta: #4486e8;
   --clr-primary: #2b2b2b;
-  --clr-hr: #bfbfbf; }
+  --clr-hr: #bfbfbf;
+  --clr-content-2: #e6e8eb; }
