--- a/style/sass/app.scss
+++ b/style/sass/app.scss
@@ -251,3 +251,40 @@
     font-size: 15px;
   }
 }
+
+.project-card {
+  background-color: var(--clr-content-2) !important;
+  border-radius: 10px;
+  position: relative;
+  padding: 15px;
+  padding-bottom: 50px;
+  font-size: 15px;
+
+  &__name {
+    background-color: var(--clr-hr);
+    height: 40px;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    h3 {
+      font-size: 23px;
+      color: var(--clr-primary);
+      margin-bottom: 5px;
+    }
+  }
+}
+
+.projects {
+  &__grid {
+    width: 100%;
+    max-width: 700px;
+    margin: 0 auto;
+    display: grid;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+    grid-template-columns: 1fr 1fr;
+  }
+}
