--- a/style/css/globals.css
+++ b/style/css/globals.css
@@ -288,7 +288,8 @@
   position: relative;
   padding: 15px;
   padding-bottom: 50px;
-  font-size: 15px; }
+  font-size: 15px;
+  min-height: 100%; }
   .project-card__name {
     background-color: var(--clr-hr);
     height: 40px;
@@ -303,14 +304,20 @@
       color: var(--clr-primary);
       margin-bottom: 5px; }
 
-.projects__grid {
-  width: 100%;
-  max-width: 700px;
-  margin: 0 auto;
-  display: grid;
-  grid-column-gap: 20px;
-  grid-row-gap: 20px;
-  grid-template-columns: 1fr 1fr; }
+.projects {
+  height: 100%; }
+  .projects__grid {
+    width: 100%;
+    max-width: 700px;
+    margin: 0 auto;
+    display: grid;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+    grid-template-columns: 1fr 1fr;
+    height: 100%; }
+    @media only screen and (max-width: 900px) {
+      .projects__grid {
+        grid-template-columns: 1fr; } }
 
 .flex-box {
   display: flex; }
