--- a/style/sass/app.scss
+++ b/style/sass/app.scss
@@ -259,6 +259,7 @@
   padding: 15px;
   padding-bottom: 50px;
   font-size: 15px;
+  min-height: 100%;
 
   &__name {
     background-color: var(--clr-hr);
@@ -278,6 +279,7 @@
 }
 
 .projects {
+  height: 100%;
   &__grid {
     width: 100%;
     max-width: 700px;
@@ -286,5 +288,10 @@
     grid-column-gap: 20px;
     grid-row-gap: 20px;
     grid-template-columns: 1fr 1fr;
+    height: 100%;
+
+    @media only screen and (max-width: 900px) {
+      grid-template-columns: 1fr;
+    }
   }
 }
