--- a/style/sass/app.scss
+++ b/style/sass/app.scss
@@ -257,13 +257,22 @@
   border-radius: 10px;
   position: relative;
   padding: 15px;
-  padding-bottom: 50px;
+  padding-bottom: 70px;
   font-size: 15px;
   min-height: 100%;
 
+  &__demo {
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-radius: 0px;
+    border-top-right-radius: 10px;
+    padding: 7px;
+  }
+
   &__name {
     background-color: var(--clr-hr);
-    height: 40px;
+    height: 50px;
     bottom: 0;
     left: 0;
     position: absolute;
@@ -274,6 +283,10 @@
       font-size: 23px;
       color: var(--clr-primary);
       margin-bottom: 5px;
+    }
+
+    a {
+      margin-top: 9px;
     }
   }
 }
