--- a/style/sass/utils.scss
+++ b/style/sass/utils.scss
@@ -5,6 +5,8 @@ $clr-content: #a0a1a3;
 $clr-primary: #d5d7df;
 $clr-primary2: #343638;
 $clr-primary3: #7c7c7d;
+$clr-content-2: var(--clr-content-2);
+
 $bp850: 850px;
 
 .flex-box {
