--- a/style/sass/main.scss
+++ b/style/sass/main.scss
@@ -29,6 +29,7 @@ body {
   --clr-side-nav-link: #a0a1a3;
   --clr-content: #1f2026;
   --clr-content-2: #42434a;
+  --clr-content-2-hover: #494a4d;
   --clr-primary: #d5d7df;
   --clr-primary2: #343638;
   --clr-primary3: #7c7c7d;
@@ -44,6 +45,7 @@ body {
 .light-theme {
   --clr-body: #f2f3f4;
   --clr-content: #ffffff;
+  --clr-content-2-hover: #edebeb;
   --clr-content-border: #bfbfbf;
   --clr-cta: #4486e8;
   --clr-primary: #2b2b2b;
